--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "clinq-hubspot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "clinq-crm-bridge": "^3.2.0",
-    "hubspot": "^1.2.3"
-  },
-  "engines": {
-    "node": "^8 || ^9"
-  }
+	"name": "clinq-hubspot",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"dependencies": {
+		"@clinq/bridge": "^3.0.0",
+		"hubspot": "^1.2.3"
+	}
 }
