--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "watch": "nodemon index.js"
   },
   "dependencies": {
-    "@clinq/bridge": "^5.1.1",
-    "hubspot": "^1.2.3"
+    "@clinq/bridge": "^6.0.0",
+    "hubspot": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
