--- a/package.json
+++ b/package.json
@@ -1,18 +1,59 @@
 {
   "name": "clinq-bridge-hubspot",
-  "version": "1.0.0",
   "private": true,
-  "main": "index.js",
-  "license": "MIT",
+  "description": "CLINQ CRM-Bridge for Hubspot",
+  "main": "dist/index.js",
+  "repository": "git@github.com:sipgate/clinq-bridge-hubspot.git",
+  "contributors": [
+    {
+      "name": "Benjamin Kluck",
+      "email": "ben@fug.lu"
+    },
+    {
+      "name": "Felix Gladisch",
+      "email": "felix@felixgladisch.de"
+    }
+  ],
+  "license": "Apache-2.0",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js"
+    "postinstall": "tsc",
+    "compile": "tsc",
+    "start": "node dist/index",
+    "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "@clinq/bridge": "^7.7.0",
-    "hubspot": "^2.0.0"
+    "@types/express": "^4.16.1",
+    "@types/node": "^10.12.20",
+    "express": "^4.16.4",
+    "hubspot": "^2.1.1",
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.1",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.16.3",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-eslint-rules": "^5.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts}": [
+      "prettier --write",
+      "tslint",
+      "git add"
+    ],
+    "*.{json,yml,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
