--- a/package.json
+++ b/package.json
@@ -19,25 +19,26 @@
     "postinstall": "tsc",
     "compile": "tsc",
     "start": "ts-node src/index",
-    "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "watch": "ts-node-dev --respawn src/index.ts",
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "@clinq/bridge": "^7.8.1",
     "@types/express": "^4.16.1",
-    "@types/node": "^10.12.20",
+    "@types/node": "^11.11.1",
     "express": "^4.16.4",
     "hubspot": "^2.1.1",
-    "typescript": "^3.2.4"
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.3",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
+    "lint-staged": "^8.1.5",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "ts-node": "^8.0.3",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.13.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0"
   },
   "husky": {
