--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@clinq/bridge": "^7.8.1",
     "@types/express": "^4.16.1",
     "@types/node": "^11.11.1",
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "hubspot": "^2.1.1",
     "typescript": "^3.3.3333"
