--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/node": "^11.11.1",
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "google-libphonenumber": "^3.2.2",
     "hubspot": "^2.1.1",
     "typescript": "^3.3.3333"
   },
   "devDependencies": {
+    "@types/google-libphonenumber": "^7.4.17",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
