--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "postinstall": "tsc",
-    "compile": "tsc",
-    "start": "ts-node src/index",
-    "watch": "ts-node-dev --respawn src/index.ts",
+    "start": "ts-node-dev src/index.ts",
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
@@ -36,9 +34,7 @@
     "@types/google-libphonenumber": "^7.4.17",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
-    "ts-node": "^8.0.3",
     "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.13.1",
     "tslint-config-prettier": "^1.18.0",
