--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@types/google-libphonenumber": "^7.4.17",
+    "@types/request": "^2.48.1",
+    "@types/request-promise": "^4.1.42",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
