--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   "license": "Apache-2.0",
   "scripts": {
     "postinstall": "tsc",
-    "start": "ts-node-dev src/index.ts",
+    "start": "env-cmd -f .env ts-node-dev src/index.ts",
     "lint": "tslint --project tsconfig.json"
   },
   "dependencies": {
     "@clinq/bridge": "^10.1.2",
+    "@hubspot/api-client": "^3.4.1",
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.12",
     "axios": "^0.19.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "google-libphonenumber": "^3.2.3",
-    "hubspot": "^2.1.3",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
