🔧 Fixes ingres yml file

--- a/k8s/template/ingress.yml
+++ b/k8s/template/ingress.yml
@@ -15,7 +15,7 @@ spec:
       secretName: $APP-tls
   rules:
     - host: $DOMAIN
-    - http:
+      http:
         paths:
           - path: /
             pathType: Prefix
