--- a/k8s/template/deployment.yml
+++ b/k8s/template/deployment.yml
@@ -46,7 +46,7 @@ spec:
             - name: CACHE_REFRESH_INTERVAL
               value: "3600"
             - name: REDIS_URL
-              value: redis://10.237.97.227
+              value: rediss://10.102.0.11:6378
             - name: HUBSPOT_CLIENT_ID
               value: 6bd4c77d-7d54-47fe-b637-6be96d8c3c05
             - name: OAUTH_IDENTIFIER
