--- a/package.json
+++ b/package.json
@@ -16,44 +16,36 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "postinstall": "tsc",
+    "prepare": "husky install",
+    "precommit": "lint-staged",
+    "build": "tsc",
     "start": "env-cmd -f .env ts-node-dev src/index.ts",
-    "lint": "tslint --project tsconfig.json",
-    "format": "prettier --write \"src/**/*.{ts,js,css}\""
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@clinq/bridge": "^11.2.4",
+    "@clinq/bridge": "^11.3.1",
     "@hubspot/api-client": "^3.4.1",
     "@types/express": "^4.17.0",
-    "@types/node": "^14.14.33",
     "@types/google-libphonenumber": "^7.4.17",
-    "@types/request": "^2.48.1",
+    "@types/node": "^14.14.33",
     "@types/request-promise": "^4.1.44",
+    "@types/request": "^2.48.1",
     "axios": "^0.21.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "google-libphonenumber": "^3.2.3",
     "hubspot": "^2.3.14",
-    "typescript": "^4.2.3"
+    "husky": "^7.0.2"
   },
   "devDependencies": {
-    "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "typescript": "^4.2.3"
   },
   "lint-staged": {
     "*.{ts}": [
       "prettier --write",
-      "tslint",
       "git add"
     ],
     "*.{json,yml,md}": [
