--- a/package.json
+++ b/package.json
@@ -25,11 +25,6 @@
   "dependencies": {
     "@clinq/bridge": "^11.3.1",
     "@hubspot/api-client": "^3.4.1",
-    "@types/express": "^4.17.0",
-    "@types/google-libphonenumber": "^7.4.17",
-    "@types/node": "^14.14.33",
-    "@types/request-promise": "^4.1.44",
-    "@types/request": "^2.48.1",
     "axios": "^0.21.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
@@ -38,9 +33,14 @@
     "husky": "^7.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.0",
+    "@types/google-libphonenumber": "^7.4.17",
+    "@types/node": "^14.14.33",
+    "@types/request": "^2.48.1",
+    "@types/request-promise": "^4.1.44",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
-    "ts-node-dev": "^1.0.0-pre.40",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "lint-staged": {
