--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prepare": "husky install",
     "precommit": "lint-staged",
     "build": "tsc",
-    "start": "env-cmd -f .env ts-node-dev src/index.ts",
+    "start": "ts-node src/index.ts",
+    "lint": "eslint 'src/**/*.ts' --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -38,6 +39,9 @@
     "@types/node": "^14.14.33",
     "@types/request": "^2.48.1",
     "@types/request-promise": "^4.1.44",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
@@ -45,6 +49,7 @@
   },
   "lint-staged": {
     "*.{ts}": [
+      "eslint --fix",
       "prettier --write",
       "git add"
     ],
