--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/request-promise": "^4.1.44",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.3.2",
